# trigger_ratio

./: CMakeLists.txt  readme.md
Examples/: CMakeLists.txt
Examples/include/: plop.hpp
Examples/src/: main.cpp
googletest/docs/: advanced.md
googletest/docs/reference/: testing.md
googletest/googletest/include/gtest/: gtest.h
libRatio/: CMakeLists.txt
libRatio/doc/: Doxyfile-html.cmake
libRatio/include/: Ratio.hpp  operatorsMath.hpp
libRatio/src/: Ratio.cpp
myCode1/: CMakeLists.txt
myCode1/src/: plop.cpp
myCode2/: CMakeLists.txt
myCode2/src/: imageStabilization.cpp
myCode3/: CMakeLists.txt
myCode3/src/: main1.cpp  main2.cpp  main3.cpp
myExamples/: CMakeLists.txt
myExamples/include/: plop.hpp
myExamples/src/: main.cpp
myLib/include/: VectorD.hpp
myLib/src/: VectorD.cpp
unitTests/: CMakeLists.txt
unitTests/src/: main.cpp
